@@ -78,7 +78,6 @@ D/smsc////
 /xml_definitions.h/1.6/Sun Jan 14 19:21:36 2007//
 /xml_shared.c/1.14/Sun Jan 14 19:21:36 2007//
 /xml_shared.h/1.10/Sun Jan 14 19:21:36 2007//
-/smsbox.c/1.274/Wed Apr 11 18:34:19 2007//
 /bb_smscconn_cb.h/1.16/Wed Mar 21 21:41:50 2007//
 /bearerbox.c/1.165/Wed Mar 21 22:13:55 2007//
 /bearerbox.h/1.32/Wed Mar 21 21:34:24 2007//
@@ -88,3 +87,4 @@ D/smsc////
 /bb_smscconn.c/1.94/Tue Jun 12 14:06:30 2007//
 /dlr.h/1.24/Mon Jul  2 12:18:00 2007//
 /ota_compiler.c/1.12/Sun Jul 22 13:22:24 2007//
+/smsbox.c/1.275/Wed Aug  1 21:53:19 2007//
